build(src): добавлены пакеты stylelint, eslint, prettier, etc.
Проведена стилизация всего кода проекта на согласно настройкам stylelint, eslint, prettier. Исправлены замечания от eslint по коду.

BREAKING CHANGE:

--- a/src/common/components/ButtonStyled/ButtonStyled.module.scss
+++ b/src/common/components/ButtonStyled/ButtonStyled.module.scss
@@ -1,8 +1,10 @@
 .button {
+  padding: 5px 30px !important;
+
   font-family: inherit !important;
-  border-radius: 30px !important;
+  font-size: 16px !important;
   text-transform: none !important;
   letter-spacing: 0.5px !important;
-  font-size: inherit !important;
-  padding: 5px 30px !important;
+
+  border-radius: 30px !important;
 }
