--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 *,
 *::before,
 *::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+
   border: 0;
-  box-sizing: border-box;
 }
 li {
   list-style: none;
@@ -22,26 +23,30 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: inherit;
   font-size: inherit;
+  font-weight: inherit;
 }
 img {
   vertical-align: top;
 }
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 0.5px;
   height: 100%;
+
+  font-family: 'Montserrat', sans-serif;
   line-height: 1;
-  /* When you tap, it removes the background rectangles */
-  -webkit-tap-highlight-color: transparent;
+  letter-spacing: 0.5px;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* When you tap, it removes the background rectangles */
+  -webkit-tap-highlight-color: transparent;
 }
 html {
   font-size: 14px;
   color: black;
+
+  background: rgb(140, 140, 140);
 }
 
 code {
@@ -49,8 +54,9 @@ code {
 }
 
 #root {
-  min-height: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+
+  min-height: 100%;
 }
