feat(auth): добавлена валидация формы
Добавлена валидация формы с использованием библиотеки yup, а так же добавлены валидационные схемы для формы регистрации и профиля

--- a/src/features/auth/LogInApp/LogInApp.module.scss
+++ b/src/features/auth/LogInApp/LogInApp.module.scss
@@ -13,31 +13,53 @@
 
   & > * {
     &::first-letter {
-      text-transform: uppercase;
+      text-transform: uppercase !important;
     }
   }
+}
 
+.login {
   &__title {
     margin: 0px 0px 15px 0px;
 
     font-size: 26px;
     font-weight: 600;
   }
-
   &__form {
     display: flex;
     flex-direction: column;
-    row-gap: 15px;
 
     margin: 0px 0px 25px 0px;
   }
+  &__field {
+    & > * {
+      font-family: inherit !important;
+      letter-spacing: inherit !important;
+      &::first-letter {
+        text-transform: uppercase !important;
+      }
+    }
+  }
+  &__errorBlock {
+    height: 15px;
+    margin: 5px 0px 0px 0px;
 
+    font-size: 11px;
+    color: red;
+    text-align: start;
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
   &__blockRemember {
     display: flex;
     flex-wrap: wrap;
+    row-gap: 10px;
     column-gap: 20px;
     align-items: center;
     justify-content: space-between;
+
+    margin: 0px 0px 15px 0px;
 
     font-weight: 500;
 
@@ -45,12 +67,26 @@
       justify-content: center;
     }
   }
+  &__checkBoxBlock {
+    margin-right: 0px !important;
+    margin-left: -2px !important;
+  }
+  &__typography {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
 
+    font-family: inherit !important;
+    font-weight: 500 !important;
+    letter-spacing: inherit !important;
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
   &__forgotPassword {
     color: blue;
     text-transform: capitalize;
   }
-
   &__signUpBlock {
     display: flex;
     flex-direction: column;
@@ -62,12 +98,10 @@
       }
     }
   }
-
   &__text {
     font-weight: 500;
     color: grey;
   }
-
   &__signUp {
     font-size: 16px;
     font-weight: 500;
@@ -77,4 +111,6 @@
 }
 
 .checkbox {
+  margin: 0px 9px 0px 0px !important;
+  padding: 0 !important;
 }
