--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -13,3 +13,9 @@
   margin: 0 auto;
   padding: 0 15px;
 }
+.circularProgress {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+}
