fix(src): fix bugs after merging (registration + login)

--- a/src/features/auth/LogInApp/LogInApp.module.scss
+++ b/src/features/auth/LogInApp/LogInApp.module.scss
@@ -8,7 +8,7 @@
 
   text-align: center;
 
-  background: rgb(240, 240, 240);
+  background: rgb(240 240 240);
   border-radius: 20px;
 
   & > * {
@@ -20,37 +20,43 @@
 
 .login {
   &__title {
-    margin: 0px 0px 15px 0px;
+    margin: 0 0 15px;
 
     font-size: 26px;
     font-weight: 600;
   }
+
   &__form {
     display: flex;
     flex-direction: column;
 
-    margin: 0px 0px 25px 0px;
+    margin: 0 0 25px;
   }
+
   &__field {
     & > * {
       font-family: inherit !important;
       letter-spacing: inherit !important;
+
       &::first-letter {
         text-transform: uppercase !important;
       }
     }
   }
+
   &__errorBlock {
     height: 15px;
-    margin: 5px 0px 0px 0px;
+    margin: 5px 0 0;
 
     font-size: 11px;
     color: red;
     text-align: start;
+
     &::first-letter {
       text-transform: uppercase;
     }
   }
+
   &__blockRemember {
     display: flex;
     flex-wrap: wrap;
@@ -59,7 +65,7 @@
     align-items: center;
     justify-content: space-between;
 
-    margin: 0px 0px 15px 0px;
+    margin: 0 0 15px;
 
     font-weight: 500;
 
@@ -67,10 +73,12 @@
       justify-content: center;
     }
   }
+
   &__checkBoxBlock {
-    margin-right: 0px !important;
+    margin-right: 0 !important;
     margin-left: -2px !important;
   }
+
   &__typography {
     -moz-user-select: none;
     -khtml-user-select: none;
@@ -79,14 +87,17 @@
     font-family: inherit !important;
     font-weight: 500 !important;
     letter-spacing: inherit !important;
+
     &::first-letter {
       text-transform: uppercase;
     }
   }
+
   &__forgotPassword {
     color: blue;
     text-transform: capitalize;
   }
+
   &__signUpBlock {
     display: flex;
     flex-direction: column;
@@ -98,10 +109,12 @@
       }
     }
   }
+
   &__text {
     font-weight: 500;
     color: grey;
   }
+
   &__signUp {
     font-size: 16px;
     font-weight: 500;
@@ -111,6 +124,6 @@
 }
 
 .checkbox {
-  margin: 0px 9px 0px 0px !important;
+  margin: 0 9px 0 0 !important;
   padding: 0 !important;
 }
