--- a/src/common/components/CustomButton/CustomButton.module.scss
+++ b/src/common/components/CustomButton/CustomButton.module.scss
@@ -3,7 +3,7 @@
 
   font-family: inherit !important;
   font-size: 16px !important;
-  text-transform: capitalize !important;
+  text-transform: none !important;
   letter-spacing: 0.5px !important;
 
   border-radius: 30px !important;
