--- a/src/features/auth/LogInApp/LogInApp.module.scss
+++ b/src/features/auth/LogInApp/LogInApp.module.scss
@@ -1,9 +1,10 @@
 .loginContainer {
   display: flex;
-  flex: 0 1 400px;
   flex-direction: column;
   align-self: center;
 
+  width: 100%;
+  max-width: 400px;
   padding: 30px;
 
   text-align: center;
