--- a/src/features/auth/NewPassword/NewPassword.module.scss
+++ b/src/features/auth/NewPassword/NewPassword.module.scss
@@ -1,6 +1,7 @@
 .setPasswordContainer {
   display: flex;
-  flex: 0 1 400px;
+  width: 100%;
+  max-width: 400px;
   flex-direction: column;
   align-self: center;
 
