--- a/src/features/profile/Profile.module.scss
+++ b/src/features/profile/Profile.module.scss
@@ -16,7 +16,6 @@
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     align-items: center;
     align-self: center;
 
@@ -46,13 +45,19 @@
     margin: 0px 10px 0px 0px;
   }
   &__title {
-    margin: 0px 0px 10px 0px;
+    margin: 0px 0px 30px 0px;
 
     font-size: 26px;
     font-weight: 600;
     &::first-letter {
       text-transform: uppercase;
     }
+  }
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
   }
   &__avatarBlock {
     position: relative;
@@ -101,10 +106,25 @@
     -khtml-user-select: none;
     user-select: none;
 
+    display: flex;
+    align-items: center;
+
+    height: 68.42px;
+
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
     text-transform: capitalize;
+  }
+  &__field {
+    & > * {
+      font-family: inherit !important;
+      letter-spacing: inherit !important;
+
+      &::first-letter {
+        text-transform: uppercase !important;
+      }
+    }
   }
   &__marker {
     cursor: pointer;
@@ -117,6 +137,8 @@
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;
+
+    margin: 0px 0px 20px 0px;
 
     color: grey;
   }
