--- a/src/features/auth/NewPassword/NewPassword.module.scss
+++ b/src/features/auth/NewPassword/NewPassword.module.scss
@@ -1,45 +1,36 @@
+@import '../../../app/mixinCommon';
+
 .setPasswordContainer {
   display: flex;
-  width: 100%;
-  max-width: 400px;
   flex-direction: column;
   align-self: center;
 
+  width: 100%;
+  max-width: 400px;
   padding: 30px;
 
   text-align: center;
 
   background: rgb(240 240 240);
   border-radius: 20px;
-
-  & > * {
-    &::first-letter {
-      text-transform: uppercase !important;
-    }
-  }
 }
-.setPassword {
-  &__title {
-    margin: 0 0 35px;
 
-    font-size: 26px;
-    font-weight: 600;
+.setPassword {
+  &__form {
+    display: flex;
+    flex-direction: column;
   }
-  &__field {
-    & > * {
-      font-family: inherit !important;
-      letter-spacing: inherit !important;
-    }
+
+  &__title {
+    @include auth_title_style;
   }
+
   &__text {
-    margin: 0px 0px 40px 0px;
+    margin: 0px 0px 25px 0px;
 
     font-weight: 500;
     line-height: 25px;
     color: grey;
     text-align: start;
-    &::first-letter {
-      text-transform: uppercase !important;
-    }
   }
 }
