--- a/src/features/auth/Registration/Registration.module.scss
+++ b/src/features/auth/Registration/Registration.module.scss
@@ -1,52 +1,45 @@
+@import '../../../app/mixinCommon';
+
 .registration {
+  display: flex;
+  flex-direction: column;
   align-self: center;
 
   width: 100%;
-  max-width: 413px;
-  padding: 25px 33px 42px;
+  max-width: 400px;
+  padding: 30px;
+
+  text-align: center;
 
   background-color: #fff;
   border-radius: 20px;
-  box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), -1px -1px 2px rgb(0 0 0 / 10%);
+}
 
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
 
-    .title {
-      margin-bottom: 20px;
+.title {
+  @include auth_title_style;
+}
 
-      font-size: 26px;
-      font-weight: 600;
-      line-height: 31.5px;
-      text-transform: capitalize;
-    }
+.button {
+  margin: 25px 0px;
+}
 
-    .button {
-      margin-top: 30px;
-      margin-bottom: 31px;
+.signInQuestion {
+  margin: 0px 0px 10px 0px;
 
-      text-transform: capitalize !important;
-    }
+  font-weight: 500;
+  color: grey;
+}
 
-    .signInQuestion {
-      margin-bottom: 11px;
-
-      font-weight: 600;
-      line-height: 24px;
-
-      opacity: 0.5;
-    }
-
-    .signInLink {
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 24px;
-      color: #366eff;
-      text-decoration: underline;
-      text-transform: capitalize;
-    }
-  }
+.signInLink {
+  font-size: 16px;
+  font-weight: 500;
+  color: blue;
+  text-decoration: underline;
 }
