refactor(app): moved to a separate component menu list and redesigned menu list

--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -1,44 +1,80 @@
+@import '../../../app/mixinCommon';
+
 .headerContainer {
   position: static !important;
+  z-index: 1 !important;
 }
+
 .header {
   max-width: 1050px !important;
+
   &__logoContainer {
     display: flex;
     flex-grow: 1;
 
     & > * {
-      -moz-user-select: none;
-      -khtml-user-select: none;
-      user-select: none;
+      @include user_select_none;
 
-      font-family: inherit !important;
       font-weight: 700 !important;
       color: inherit;
       text-decoration: none;
     }
   }
+
   &__logo {
     font-size: 30px;
   }
-  &__profileBlock {
+
+  &__avatarContainer {
+    position: relative;
+
     display: flex;
     align-items: center;
   }
+
   &__userName {
+    @include user_select_none;
+
     cursor: pointer;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    user-select: none;
 
     margin: 0px 15px 0px 0px;
 
     text-decoration: underline;
   }
-  &__profileIcon {
-    padding: 0 !important;
+
+  &__pic {
+    cursor: pointer;
+
+    position: relative;
+
+    overflow: hidden;
+
+    width: 40px;
+    height: 40px;
+
+    border-radius: 100%;
   }
-  &__menu {
-    margin: 45px 0px 0px 0px;
+
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+  }
+}
+
+.beforeElement {
+  &::before {
+    content: '';
+
+    position: absolute;
+    z-index: 2;
+
+    width: 100vw;
+    height: 100vh;
   }
 }
