--- a/src/features/packs/PackSlider/PackSlider.module.scss
+++ b/src/features/packs/PackSlider/PackSlider.module.scss
@@ -7,6 +7,22 @@
 .slider {
   width: 155px !important;
 
+  & > *:nth-child(1) {
+    right: -9px;
+
+    width: 110%;
+  }
+
+  & > *:nth-child(3) {
+    margin-top: -6px;
+    margin-left: -7px;
+  }
+
+  & > *:nth-child(4) {
+    margin-top: -6px;
+    margin-left: -7px;
+  }
+
   &__title {
     font-weight: 600;
   }
@@ -34,10 +50,10 @@
   }
 }
 
-.MuiSlider-markActive {
-  box-shadow: unset !important;
-}
+// .MuiSlider-markActive {
+//   box-shadow: unset !important;
+// }
 
-.Mui-active {
-  box-shadow: unset !important;
-}
+// .Mui-active {
+//   box-shadow: unset !important;
+// }
