--- a/src/features/packs/addPack/AddPack.module.scss
+++ b/src/features/packs/addPack/AddPack.module.scss
@@ -5,11 +5,23 @@
   align-items: center;
 }
 
-.Error {
-  color: red
+.Error{
+  width: 100%;
+  height: 10px;
+
+  &__active{
+    color: red;
+  }
 }
 
 .Title{
+  text-align: center;
   font-weight: bold;
   font-size: 20px;
+}
+
+.Submit{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
