--- a/src/features/packs/addPack/AddPack.module.scss
+++ b/src/features/packs/addPack/AddPack.module.scss
@@ -8,9 +8,11 @@
 .Error{
   width: 100%;
   height: 10px;
+  visibility: hidden;
 
   &__active{
     color: red;
+    visibility: visible;
   }
 }
 
