--- a/src/features/packs/editPack/EditPack.module.scss
+++ b/src/features/packs/editPack/EditPack.module.scss
@@ -24,8 +24,10 @@
 .Error{
   width: 100%;
   height: 10px;
+  visibility: hidden;
 
   &__active{
     color: red;
+    visibility: visible;
   }
 }
