--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,10 @@ img {
 
 html,
 body {
+  resize: none;
+
+  overflow-y: overlay;
+
   height: 100%;
 
   line-height: 1;
@@ -50,6 +54,32 @@ body {
 
   /* When you tap, it removes the background rectangles */
   -webkit-tap-highlight-color: transparent;
+
+  &::-webkit-scrollbar {
+    width: 12px; /* Remove scrollbar space */
+  }
+
+  &::-webkit-scrollbar-track {
+    background: rgb(241 241 241 / 32.2%);
+    background-clip: padding-box;
+    border: 4px solid transparent;
+    border-radius: 9999px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(131 131 131 / 47.5%);
+    background-clip: padding-box;
+    border: 4px solid rgb(0 0 0 / 0%);
+    border-radius: 9999px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgb(89 55 55);
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 3px solid transparent;
+    border-radius: 9999px;
+  }
 }
 
 html {
