refactor(common): change mixins path

--- a/src/common/components/CustomSearch/CustomSearch.module.scss
+++ b/src/common/components/CustomSearch/CustomSearch.module.scss
@@ -31,6 +31,10 @@
         padding: 9px 9px 9px 35px;
 
         background: white;
+
+        span {
+          letter-spacing: 0 !important;
+        }
       }
     }
   }
