--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import '../../../app/mixinCommon';
+@import '../../styles/mixins/mixinCommon';
 
 .headerContainer {
   position: static !important;
