--- a/src/features/auth/NewPassword/NewPassword.module.scss
+++ b/src/features/auth/NewPassword/NewPassword.module.scss
@@ -1,4 +1,4 @@
-@import '../../../app/mixinCommon';
+@import '../../../common/styles/mixins/mixinCommon';
 
 .setPasswordContainer {
   display: flex;
