--- a/src/features/cards/Modals/AddCard/AddCard.module.scss
+++ b/src/features/cards/Modals/AddCard/AddCard.module.scss
@@ -1,40 +1,44 @@
-.CardContainer{
+.CardContainer {
   width: 100%;
   height: 100%;
 }
-.CardTypeContainer{
+
+.CardTypeContainer {
   width: 100%;
 
-  &__title{
+  &__title {
     display: block;
+
     margin-bottom: 10px;
   }
 }
 
-.Type{
+.Type {
   margin-bottom: 10px;
 }
 
-
-.AddTextCard, .FormControl{
+.AddTextCard,
+.FormControl {
   width: 100%;
 }
 
-
-.Error{
+.Error {
   width: 100%;
   height: 10px;
   margin-bottom: 5px;
+
   visibility: hidden;
 
-  &__active{
+  &__active {
     color: red;
+
     visibility: visible;
   }
 }
 
-.Submit{
-  width: 100%;
+.Submit {
   display: flex;
   justify-content: space-between;
+
+  width: 100%;
 }
