--- a/src/features/learn/Learn.module.scss
+++ b/src/features/learn/Learn.module.scss
@@ -12,13 +12,12 @@
 }
 
 .learnContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-
   padding: 30px 40px;
-
   background: rgb(240 240 240);
   border-radius: 20px;
+}
+
+.ButtonContainer{
+  display: flex;
+  justify-content: center;
 }
