--- a/src/common/components/ModalDialog/CustomModalDialog.module.scss
+++ b/src/common/components/ModalDialog/CustomModalDialog.module.scss
@@ -1,10 +1,11 @@
 .Modal{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.4);
-  position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
