--- a/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
+++ b/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
@@ -88,10 +88,6 @@
 
     animation: animateMenuOpen 0.4s ease forwards;
 
-    &:hover {
-      transform: scale(1.1);
-    }
-
     &:nth-child(1) {
       left: 35px;
 
@@ -116,6 +112,12 @@
       animation-delay: 0.1s;
     }
   }
+}
+
+.disabled:nth-child(1) {
+  cursor: auto;
+
+  background: url('../../../assets/img/icons/studyPackDisabled.svg') 50% / auto auto no-repeat;
 }
 
 .menuItem {
