--- a/src/features/packs/Modals/AddPack/AddPack.module.scss
+++ b/src/features/packs/Modals/AddPack/AddPack.module.scss
@@ -9,6 +9,7 @@
   width: 100%;
   height: 10px;
   visibility: hidden;
+  margin-bottom: 10px;
 
   &__active{
     color: red;
@@ -26,4 +27,19 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.FormFields{
+  width: 100%;
+}
+.InputCoverPack{
+  display: none;
+}
+.Image{
+  width: inherit;
+  height: 100px;
+}
+.ImageContainer{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
