fix(PacksTableBoy): component style refactor

--- a/src/common/styles/mixins/mixinCommon.scss
+++ b/src/common/styles/mixins/mixinCommon.scss
@@ -20,6 +20,12 @@
         text-align: right;
       }
 
+      .image{
+        width: 80px;
+        height: 50px;
+        margin-left: 5px;
+      }
+
       .tableCellText {
         overflow: hidden;
         display: -webkit-box;
