--- a/src/features/packs/Modals/EditPack/EditPack.module.scss
+++ b/src/features/packs/Modals/EditPack/EditPack.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .PackDataBlock {
@@ -25,6 +26,7 @@
   width: 100%;
   height: 10px;
   visibility: hidden;
+  margin-bottom: 10px;
 
   &__active{
     color: red;
