fix(AddCard): fix style AddCard & DeleteCard

--- a/src/features/cards/Modals/DeleteCard/DeleteCard.module.scss
+++ b/src/features/cards/Modals/DeleteCard/DeleteCard.module.scss
@@ -1,8 +1,10 @@
 .Message{
   margin-bottom: 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 .ButtonContainer{
   display: flex;
   justify-content: space-between;
+  padding: 10px 10px 10px 10px;
 }
